fix nav drop down menu text word wrap

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -282,7 +282,7 @@ nav ul li:hover > ul {
 	
 /* Fisrt Tier Dropdown */
 nav ul ul li {
-	width:170px;
+	width:270px;
 	float:none;
 	display:list-item;
 	position: relative;
